# client

./: .cmake-format.yaml  .craft.ini  .craft.shelf  .drone.example.star  .drone.star  .drone.yml  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackOptions.cmake.in  ChangeLog  Jenkinsfile  OWNCLOUD.cmake  PACKAGING.md  README.md  THEME.cmake  VERSION.cmake  Vagrantfile  agents.md  appveyor.ini  client.qrc  conanfile.py  conanfile.txt  config.h.in  mirall.desktop.in  multiple instances  newfile.txt  sync-exclude.lst  testfile.txt  theme.qrc
.conan/config/: global.conf
.conan/profiles/: macos-latest-armv8.conanprofile  windows-latest-x86_64.conanprofile
.drone/: handle-core-dumps.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  entrypoint.sh  issue_template.md  patch_release_template.md  pull_request_template.md  release_template.md  release_template_outdated_2020.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: .craft.ps1  branded-client.yml  changelog.yml  clang-format.yml  conan.yml  doc-screenshots.yml  git-checks.yml  gui-tests.yml  main.yml  pull-transifex.yml  push-transifex.yml  stale.yml  translate.yml
.tx/: config
admin/: clean-leftovers.ps1
admin/osx/: CMakeLists.txt  DS_Store.in  app_sign.sh  gen_sym_files.py  macosx.pkgproj.cmake  post_install.sh.cmake  pre_install.sh.cmake  sign_dmg.sh
admin/release_texts/: prep_release_texts.sh
admin/website/: changelog-desktop.html
admin/win/: download_runtimes.sh
changelog/: CHANGELOG.tmpl
changelog/2.10.0_2022-01-17/: 8924.md  9170.md  9194.md  9208.md  9223.md  9241.md  9341.md  9342.md
changelog/2.10.1_2022-04-05/: 9236  9236.md  9375  9383  9383.md  9460.md  9489.md  9533  9533.md
changelog/2.11.0_2022-08-18/: 5174.md  (+4 more)
csync/: CMakeLists.txt
csync/src/: CMakeLists.txt  csync.c  csync.h  csync_exclude.c  csync_exclude.h  csync_misc.c  csync_private.h  csync_reconcile.c  csync_statedb.c  csync_update.c
csync/src/std/: c_path.c  c_string.c
csync/src/vio/: csync_vio.c  csync_vio_local.c  csync_vio_local.h  csync_vio_local_unix.c
csync/tests/: CMakeLists.txt
csync/tests/ownCloud/ownCloud/: Test.pm
doc/: .gitignore  CMakeLists.txt  architecture.rst  autoupdate.rst  building.rst  conf.py  conffile.rst  faq.rst  installing.rst  introduction.rst  navigating.rst  owncloudcmd.rst  uninstall.rst
docs/: Makefile  antora.yml  generate-site.js  package-lock.json  package.json  site.yml
fjittheme/: CMakeLists.txt  OEM.cmake  mytheme.cpp  mytheme.h
fogtheme/: CMakeLists.txt  OEM.cmake  mytheme.h  theme.qrc
gdstheme/: OEM.cmake  mytheme.cpp  mytheme.h  theme.qrc
guiReport/: results.json
provision/: development-documentation.yml
shell_integration/: CMakeLists.txt
shell_integration/icons/: CMakeLists.txt
shell_integration/icons/nopadding/SVG/: generate_windows_ico.sh
src/: CMakeLists.txt  main.cpp
src/libclient/: CMakeLists.txt
src/libsync/graphapi/libregraph/client/: CMakeLists.txt  OAIActivitiesApi.cpp  OAIActivitiesApi.h  OAIActivity.cpp  OAIActivity.h  OAIActivity_template.cpp  OAIActivity_template.h  OAIActivity_times.cpp  OAIActivity_times.h  OAIAppRole.cpp  OAIAppRole.h  OAIAppRoleAssignment.cpp  OAIAppRoleAssignment.h  OAIApplication.cpp  OAIApplication.h  OAIApplicationsApi.cpp  OAIApplicationsApi.h  OAIAudio.cpp  OAIAudio.h  OAIClass_Member_Reference.cpp  OAIClass_Member_Reference.h  OAIClass_Reference.cpp  OAIClass_Reference.h  OAIClass_Teacher_Reference.cpp  OAIClass_Teacher_Reference.h  OAICollection_of_activities.cpp  OAICollection_of_activities.h  OAICollection_of_appRoleAssignments.cpp  OAICollection_of_appRoleAssignments.h  OAICollection_of_applications.cpp  OAICollection_of_applications.h  OAICollection_of_class.cpp  OAICollection_of_class.h  OAICollection_of_driveItems.cpp  OAICollection_of_driveItems.h  OAICollection_of_driveItems_1.cpp  OAICollection_of_driveItems_1.h  OAICollection_of_drives.cpp  OAICollection_of_drives.h  OAICollection_of_drives_1.cpp  (+180 more)
src/plugins/vfs/win/: CMakeLists.txt  callbacks.cpp  callbacks.h  cfapi_includes.h  hydrationdevice.cpp  hydrationdevice.h  utility.cpp  utility.h  validationdevice.cpp  validationdevice.h  vfs_win.cpp  vfs_win.h  vfs_win_p.h  vfs_win_plugin_factory.cpp
src/resources/: CMakeLists.txt  client.qrc  core_theme.qrc  resourceloader.cpp  resourceloader.h  resources.cpp  resources.h  template.h
src/resources/oauth/: error.html  success.html
test/: CMakeLists.txt  owncloud_add_test.cmake  syncenginetestutils.cpp  syncenginetestutils.h  testactivitydata.cpp  testadapters.cpp  testallfilesdeleted.cpp  testappconfig.cpp  testasyncop.cpp  testblacklist.cpp  testchecksumvalidator.cpp  testchunkingng.cpp  testconcaturl.cpp  testcookies.cpp  testcredentialmanager.cpp  testcsyncsqlite.cpp  testdatabaseerror.cpp  testdownload.cpp  testexcludedfiles.cpp  testfilesystem.cpp  testfilesystem.h  testfolder.cpp  testfolderman.cpp  testfoldermigration.cpp  testfolderwatcher.cpp  testinotifywatcher.cpp  testjobqueue.cpp  testlocaldiscovery.cpp  testlockedfiles.cpp  testnetrcparser.cpp  testoauth.cpp  testoauthhtmlpage.cpp  testowncloudpropagator.cpp  testownsql.cpp  testpermissions.cpp  testplan.txt  testquota.cpp  testremotediscovery.cpp  testselectivesync.cpp  testsocketapi.cpp  (+14 more)
test/testutils/: CMakeLists.txt  syncenginetestutils.cpp  syncenginetestutils.h  test_helper.cpp  testutils.cpp  testutils.h  testutilsloader.cpp
theme/: config_with_defaults.json
translations/: Makefile  client_TW.ts  client_ar.ts  client_bg_BG.ts  client_ca.ts  client_cs.ts  client_de-informal.ts  client_de.ts  client_de_AT.ts  client_de_CH.ts  client_el.ts  client_en.ts  client_en_GB.ts  client_en_US.ts  client_es.ts  client_es_AR.ts  client_et.ts  client_eu.ts  client_fa.ts  client_fi.ts  client_fr.ts  client_gl.ts  client_hu.ts  client_it.ts  client_ja.ts  client_ko.ts  client_lo.ts  client_nb_NO.ts  client_nl.ts  client_pl.ts  client_pt.ts  client_pt_BR.ts  client_ru.ts  client_ru_RU.ts  client_sk.ts  client_sl.ts  client_sq.ts  client_sr.ts  client_sv.ts  client_th.ts  (+18 more)
(+1115 files in other folders)
